fixing datepicker responsive issue when wrapped in form

--- a/source/css/scss/objects/_datepicker.scss
+++ b/source/css/scss/objects/_datepicker.scss
@@ -1,5 +1,9 @@
 .date-range {
 
+  @media #{$wide} {
+    display: inline-block;
+  }
+
   .custom-label {
     display: block;
     margin-top: 10px;
